Fixing deprecated constructor (Java 11)
Recompile with -Xlint:deprecation for details. Fixes build warning.